Fix the final spacing issues

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 html {
   box-sizing: border-box;
+  line-height: 1.5;
 }
 
 *, *::before, *::after {
@@ -11,7 +12,7 @@ img {
 }
 
 .nav {
-  font-size: 1.2em;
+  font-size: 1.125rem;
   list-style-type: none;
   font-family: "PT Sans", sans-serif;
   font-weight: bold;
@@ -32,6 +33,11 @@ figcaption {
   font-style: italic;
 }
 
+.cp {
+  font-style: italic;
+  font-size: .5em;
+}
+
 body {
   background-color: #c9b5ab;
 }
@@ -45,7 +51,6 @@ h1, h2 {
 p {
   font-weight: normal;
   font-family: "PT Serif", serif;
-  line-height: 1.5;
 }
 
 dt {
@@ -54,6 +59,7 @@ dt {
 
 .germination {
   font-weight: bold;
+  font-size: 1.125rem;
 }
 
 .greek {
